<resources>
    <string name="app_name">Movie Trailer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cast_series">Cast Series</string>
    <string name="personal_staff">Personal Staff</string>
    <string name="similar_films">Similar Films</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="users">users</string>
    <string name="edit_account">Edit account name</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="images">Images</string>
    <string name="biography">Biography</string>
    <string name="born">Born</string>
    <string name="biography_error">There is no information about this person!</string>
    <string name="reviews">Reviews</string>
    <string name="account_not_found">Account is not found</string>
    <string name="dont_match">Passwords don\'t match</string>
    <string name="cant_change_password">You can\'t change password. Because you signed in with Google</string>
    <string name="successfully_changed">Password successfully changed</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="verification_sent">The email verification is sent your email</string>
    <string name="verification_not_sent">Couldn\'t send verification email</string>
    <string name="list_empty">List is already empty</string>
    <string name="not_available">Video is not available yet</string>

</resources>