<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_white_black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/libre_baskerville_regular"
        android:textColor="?attr/txt_black_white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/change_password"/>

    <EditText
        android:id="@+id/edit_currentPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_email_address_for_reset"
        android:textColor="@color/black"
        android:hint="@string/current_password"
        android:paddingLeft="10dp"
        android:textSize="14sp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableTint="@color/selector_edit_text_email_icon_color"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/edit_newPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_email_address_for_reset"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableTint="@color/selector_edit_text_email_icon_color"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/edit_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_email_address_for_reset"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableTint="@color/selector_edit_text_email_icon_color"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/savePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/progress_orange"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/libre_baskerville_regular"
        android:layout_marginBottom="10dp"/>

</LinearLayout>