<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.person.CastFragment">

    <LinearLayout
        android:id="@+id/linearCast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_white_black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/cast_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/ic_backFromCast"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_shape_back_icon_from_cast_fragment"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:tint="#fff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_wish_list_popularity"
                android:layout_alignParentRight="true"
                android:rotation="10"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/txt_department"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:text="Loading..."
                    android:fontFamily="@font/libre_baskerville_regular"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/background_shadow_for_cast_name">

                <TextView
                    android:id="@+id/castName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:fontFamily="@font/dancing_script_regular"
                    android:maxLines="2"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="Loading..."
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="?attr/txt_black_white"
                    android:text="@string/images"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/libre_baskerville_regular"
                    android:layout_marginTop="15dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerCastImages"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:scrollbars="none"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="?attr/txt_black_white"
                    android:text="@string/biography"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/libre_baskerville_regular"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/txt_cast_biography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?attr/gray_white"
                    android:text="Willi One Blood (born William Harbour, Jr.) is a reggae singer and actor, formerly New York-based and now in Miami. He is best known for the song"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="?attr/txt_black_white"
                    android:text="@string/born"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/libre_baskerville_regular"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/txt_cast_born"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?attr/gray_white"
                    android:text="October 15 2001"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/circularProgressBar"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/progress_orange" />

</RelativeLayout>